@@ -1,2 +1,3 @@
 shared = require "__PowerOverload__/shared"
+require "__PowerOverload__/prototypes/fuses"
 require "__PowerOverload__/prototypes/poles"
