@@ -2,6 +2,5 @@ local util = require "__core__/lualib/util"
 local shared = require "__PowerOverload__/shared"
 require "__PowerOverload__/prototypes/huge-pole"
 require "__PowerOverload__/prototypes/power-interface"
-require "__PowerOverload__/prototypes/fuses"
 require "__PowerOverload__/prototypes/transformer"
 require "__PowerOverload__/prototypes/technology"
